--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="disclaimer-cont">
         <div class="disclaimer">
-            Hi Lets crack Zomato Delivery Process Logic - Only on @levelupfrontend youtube channel
+          Welcome to PromiseEats!
         </div>
     </div>
 
